# crayo-local

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  README.md  package.json  setup.sh  start-chipotlai.sh  tsconfig.json
kik-clipper/: .gitignore  GUIDE.md  README.md  fetch.py  ffmpeg_compose.py  pipeline.py  pyproject.toml  schema.py  script_gen.py
script/: verify-retail-providers.cjs
sdks/vscode/: package.json
