[project]
name = "kik-clipper"
version = "0.1.0"
description = "AI-powered clip generator for Kik streamers"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "yt-dlp>=2024.0.0",
    "moviepy>=2.0.0",
]

[tool.setuptools]
py-modules = ["schema", "script_gen", "ffmpeg_compose", "fetch", "pipeline"]

[project.scripts]
clip = "pipeline:main"
